# AI-Learning-Lab

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  test-integration.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  experiment_proposal.md  feature_request.md
.github/workflows/: quality.yml  security.yml  tests.yml
data/: README.md
docs/: WORKFLOW.md
requirements/: base.txt  dev.txt  ml.txt
src/: __init__.py
src/models/: __init__.py
